# opengreeks

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: CI.yml
bench/: RESULTS.md  bench_parity.py  bench_second_order.py
black76_rust/: Cargo.toml
black76_rust/src/: erf.rs  gbs2.rs  greeks.rs  iv.rs  lib.rs  normal.rs  pricing.rs
bsm_rust/: Cargo.toml
bsm_rust/src/: lib.rs
python/opengreeks/: __init__.py  black76.py  black_scholes.py  black_scholes_merton.py
src/: lib.rs
